[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
authors      = ["cijiugechu <cijiugechu@gmail.com>"]
categories   = ["api-bindings", "network-programming", "web-programming"]
description  = "dmzj api bindings"
edition      = "2021"
rust-version = "1.70"
keywords     = ["dmzj", "api", "protobuf"]
license      = "Apache-2.0"
repository   = "https://github.com/cijiugechu/dmzj"
homepage     = "https://github.com/cijiugechu/dmzj"

[workspace.dependencies]
dmzj-proto = { path = "crates/dmzj-proto", version = "0.1.4" }

reqwest            = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
tokio              = { version = "1", features = ["full"] }
itoa               = { version = "1.0" }
bytes              = { version = "1.5" }
protobuf           = { version = "3.3" }
protobuf-codegen   = { version = "3.3" }
rsa                = { version = "0.9" }
base64             = { version = "0.21" }
snafu              = { version = "0.7" }
http-cache-reqwest = { version = "0.12", features = ["manager-moka"] }
reqwest-middleware = { version = "0.2" }
once_cell          = { version = "1.18" }
base64-simd        = { version = "0.8" }
criterion          = { version = "0.5" }
