[package]
name = "dmzj-api-v4"
version = "0.1.0"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
itoa = { workspace = true }
bytes = { workspace = true }
dmzj-proto = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
protobuf = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }