[package]
name = "dmzj-proto"
version = "0.1.0"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
prost = { workspace = true }
bytes = { workspace = true }
protobuf = { workspace = true }
rsa = { workspace = true }
base64 ={ workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protobuf-codegen = { workspace = true }