[package]
name = "dmzj-proto"
version = "0.1.0"
documentation = "https://docs.rs/dmzj-proto"
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true

[dependencies]
bytes = { workspace = true }
protobuf = { workspace = true }
rsa = { workspace = true }
base64 ={ workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }