[package]
name                  = "dmzj"
version               = "0.2.1"
documentation         = "https://docs.rs/dmzj"
authors.workspace     = true
description.workspace = true
edition.workspace     = true
rust-version.workspace = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true
categories.workspace  = true

[dependencies]
reqwest            = { workspace = true }
serde              = { workspace = true }
itoa               = { workspace = true }
bytes              = { workspace = true }
protobuf           = { workspace = true }
rsa                = { workspace = true }
snafu              = { workspace = true }
http-cache-reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
base64-simd        = { workspace = true }
const-decoder      = { workspace = true }
tracing            = { workspace = true }

dmzj-proto = { workspace = true }

[dev-dependencies]
base64             = { workspace = true }
tokio              = { workspace = true }
serde_json         = { workspace = true }
criterion          = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name    = "base64"
harness = false
